# wave-client

./: .env.example  .eslintrc.json  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE.txt  Makefile  README.md  package-lock.json  package.json  pyproject.toml  rollup.config.js
.github/workflows/: integration-tests.yml  javascript-ci.yml  python-ci.yml  release.yml
docs/: api-endpoints.md  api-reference.md  client-schemas.md  data-types.md  error-handling.md  examples.md  installation.md  javascript-api-reference.md  method-naming.md  pandas-integration.md  phase2-summary.md  python-api-reference.md  releases.md
javascript/: test-config.js  wave-client.js  wave-client.test.js
javascript/examples/: example.html  simple-experiment.html
javascript/src/: wave-client.js
javascript/src/core/: errors.js
javascript/tests/: constructor.test.js  error-handling.test.js  experiment-data.test.js  integration.test.js  jspsych-data.test.js  test-config.js  test-utils.js  url-authentication.test.js  utility-methods.test.js
javascript/tests/medium/: integration.test.js  jest.config.js  setup.js
javascript/tests/small/: constructor.test.js  error-handling.test.js  experiment-data.test.js  jest.config.js  jspsych-data.test.js  setup.js  url-authentication.test.js  utility-methods.test.js
python/examples/: data_analysis_example.ipynb  python_javascript_integration_example.ipynb
python/tests/: __init__.py
python/tests/medium/: __init__.py  conftest.py  (+1 more)
python/wave_client/: __init__.py  client.py  exceptions.py
tools/: generate_python_docs.py
(+19 files in other folders)
