[project]
name = "wave-client"
version = "1.0.0"
description = "Dual-language client library (JavaScript + Python) for the WAVE Backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
]

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "flake8>=7.1.1",
    "isort>=5.13.2",
    "pre-commit>=4.0.1",
    "pylint>=3.3.3",
]
test = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
]

[tool.setuptools]
packages = {find = {where = ["python"], include = ["wave_client*"]}}

[tool.setuptools.package-dir]
"" = "python"

[tool.black]
line-length = 100
extend-exclude = "notebooks"

[tool.isort]
skip = ["__init__.py", ".venv"]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"
